<resources>
    <string name="app_name">Kitchen Manager</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="recipe">Recipe</string>
    <string name="inventory">Inventory</string>
    <string name="shopping_list">Shopping List</string>
    <string name="event">Event</string>
    <string name="home">Home</string>
    <string name="title_activity_inventory">Inventory</string>
    <string name="title_activity_shopping_list">Shopping List</string>
    <string name="title_activity_event">Event</string>
    <string name="title_activity_recipe">Recipe</string>
    <string name="title_activity_recipe_activity_add_recipe">Add Recipe</string>
    <string name="title_activity_recipe_activity_view_recipe">View Recipe</string>
    <string name="title_activity_recipe_activity_edit_recipe">Edit Recipe</string>
    <string name="title_activity_toolbar">ToolbarActivity</string>
    <string name="title_activity_recipe_add_ingredient">Add Ingredient</string>
    <string name="title_activity_event_add">EventAddActivity</string>
    <string name="title_activity_event_view_event">EventViewEventActivity</string>

    //inventory add form
    <string name="inventory_name">"Name</string>
    <string name="inventory_unit">Unit</string>
    <string name="inventory_quantity">Quantity</string>

<!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_shopping_list_activity_add">Add Entry</string>
    <string name="title_activity_shopping_list_activity_edit">Edit Entry</string>
    <string name="title_activity_inventory_activity_add">Add Entry</string>
    <string name="title_activity_inventory_activity_edit">Edit Entry</string>
</resources>
