<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="com.example.kevinwidjaja.kitchenmanager.InventoryActivity_add">

    <item android:id="@+id/action_settings" android:title="@string/action_settings"
        android:orderInCategory="100" app:showAsAction="never" />

    <item android:id="@+id/home"
        android:title="@string/home"
        android:icon="@drawable/homeicon"
        app:showAsAction="always" />

    <item android:id="@+id/inventory"
        android:title="@string/inventory"
        android:icon="@drawable/test"
        app:showAsAction="never" />

    <item android:id="@+id/shoppinglist"
        android:title="@string/shopping_list"
        android:icon="@drawable/test"
        app:showAsAction="never" />

    <item android:id="@+id/recipe"
        android:title="@string/recipe"
        android:icon="@drawable/test"
        app:showAsAction="never"/>

    <item android:id="@+id/event"
        android:title="@string/event"
        android:icon="@drawable/test"
        app:showAsAction="never" />
</menu>
