<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context="com.example.kevinwidjaja.kitchenmanager.EventActivity" >

    <item android:id="@+id/action_settings" android:title="@string/action_settings"
        android:orderInCategory="100" app:showAsAction="never" />

    <item android:id="@+id/home"
        android:title="@string/home"
        android:icon="@drawable/homeicon"
        app:showAsAction="always" />

    <item android:id="@+id/inventory"
        android:title="@string/inventory"
        android:icon="@drawable/inventorymainbutton"
        app:showAsAction="never" />

    <item android:id="@+id/shoppinglist"
        android:title="@string/shopping_list"
        android:icon="@drawable/shoppinglistmainbutton"
        app:showAsAction="never" />

    <item android:id="@+id/recipe"
        android:title="@string/recipe"
        android:icon="@drawable/recipemainbutton"
        app:showAsAction="never" />

    <item android:id="@+id/event"
        android:title="@string/event"
        android:icon="@drawable/eventmainbutton"
        app:showAsAction="never" />

</menu>
