<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto" >

    <item android:id="@+id/inventory"
        android:title="@string/inventory"
        android:icon="@drawable/inventorymainbutton"
        app:showAsAction="always" />

    <item android:id="@+id/shoppinglist"
        android:title="@string/shopping_list"
        android:icon="@drawable/shoppinglistmainbutton"
        app:showAsAction="always" />

    <item android:id="@+id/recipe"
        android:title="@string/recipe"
        android:icon="@drawable/recipemainbutton"
        app:showAsAction="always" />

    <item android:id="@+id/event"
        android:title="@string/event"
        android:icon="@drawable/eventmainbutton"
        app:showAsAction="always" />

</menu>